[package]
name = "bus"
version = "0.2.0"
authors = ["mark <markm@cs.wisc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
csv = "1.1.1"
clap = "2.33.0"
serde = { version = "1.0.99", features = ["derive"] }
bitflags = "1.1.0"
chrono = { version = "0.4.7", features = ["serde"] }
json = "0.12.0"
reqwest = { version = "0.11.4", features = ["blocking"] }
openssl = { version = "0.10.60", features = ["vendored"] }
